# stock-market-lab

./: .env  .gitignore  DATA_LOADING_README.md  FINAL_SUMMARY.md  INSTALLATION_GUIDE.md  Makefile  README.md  RUNNING_INSTRUCTIONS.md  SUMMARY.md  TASK_TRACKER.md  Windows  data_loading_script.py  demo_frontend.py  docker-compose.gpu.yml  docker-compose.yml  estation  install_stock_market_lab.sh  load_nq_data.bat  load_nq_data.sh  monitor.html  performance_test.py  setup_environment.py  simple_lstm_test.py  start.bat  start.ps1  start.sh  test_backtesting.py  test_backtesting_simple.py  test_lstm_enhancement.py  test_monitoring.py  test_nq.py  test_nq_strategies.bat  train_and_trade.py  train_nq_strategy.py  validate_data.py
.claude/: settings.local.json
agents-python/: Dockerfile  README.md  USAGE.md  backtesting_framework.py  data_loader.py  distributed_ga_rl.py  distributed_training.py  ga_rl_integration.py  genetic_algorithm.py  launch_master.bat  launch_worker.sh  main.py  market_data.py  market_data_loader.py  monitoring_demo.py  news_simulator.py  reinforcement_learning.py  requirements.txt  run_training.py  run_training_multi_gpu.py  trade_sender.py
core-cpp/: CMakeLists.txt  Dockerfile  README.md
core-cpp/src/: main.cpp
db/: README.md  redis-config.conf  schema.sql
docs/: ALGORITHMS.md  ARCHITECTURE.md  FEATURES.md  HOW_IT_WORKS.md  IDEA.md  LANGUAGE_USAGE.md  PURPOSE.md  README.md  ROADMAP.md  architecture.md  backtesting-framework.md  lstm-enhancement.md  monitoring-enhancements.md  roi-tracking.md
frontend-react/: .dockerignore  .dockerignore.bak  .env  Dockerfile  README.md  package-lock.json  package.json
frontend-react/public/: index.html  manifest.json
frontend-react/src/: App.css  App.js  App.tsx  index.css  index.tsx  reportWebVitals.ts
frontend-react/src/components/: Header.css  Header.tsx
frontend-react/src/pages/: AgentMonitor.css  AgentMonitor.tsx  Dashboard.tsx  GARLTraining.css  GARLTraining.tsx  StrategyLab.css  StrategyLab.tsx
frontend-react/src/services/: api.ts  websocket.ts
gpu-acceleration-rust/: Cargo.toml  Dockerfile  README.md
gpu-acceleration-rust/src/: main.rs
infra/: docker-compose.yml
test/: strategy_lab_test.py
