[package]
name = "order-book-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
cuda = "0.1"  # For CUDA support
cudarc = "0.1"  # For CUDA operations

[dev-dependencies]
tokio-test = "0.4"