[package]
name = "order-book-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.17.2", features = ["cuda-12050", "nvrtc"] }
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
